odroid/postgres-operator-zalando/postgres-operator-ui-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-operator-ui-lb
spec:
  ports:
  - name: http
    targetPort: 8081
    port: 8081
  selector:
    app: postgres-operator-ui
  type: LoadBalancer
