odroid/postgres-operator-zalando/postgres-operator-ui-np.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: postgres-operator-ui
    meta.helm.sh/release-namespace: default
  labels:
    app.kubernetes.io/instance: postgres-operator-ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: postgres-operator-ui
    helm.sh/chart: postgres-operator-ui-1.10.0
  name: postgres-operator-ui
  namespace: default
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app.kubernetes.io/instance: postgres-operator-ui
    app.kubernetes.io/name: postgres-operator-ui
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
